--- a/app/public/index.html
+++ b/app/public/index.html
@@ -8,31 +8,44 @@
         <script src = "./js/models/patient.js"></script>
         <script src = "./js/collections/patient_collection.js"></script>
         <script src = "./js/views/patient_view.js"></script>
-        <!-- list of patients -->
-        <ul id="patientsList">
-        </ul>
-        <!-- Add patient form -->
-        <h3>Index: Add a patient here:</h3>
-        <div id = "addPatientForm">
-            <input type="text" id="newPatientName" placeholder="patient name">
-            <input type="text" id="newPatientSex" placeholder="patient sex">
-            <button id = "addNewPatient">Add patient</button>
-        </div>
-        <script type = "text/template" id = "patientTemplate">
-                    
-                    <span class = "patient">
-                        <%= patient.name %> is a <%= patient.sex %>
-                        <button class = "editButton">Edit</button>
-                        <button class = "deleteButton">Delete</button>
-                    </span>
 
-                    <span class = "editForm" style = "display: none">
-                        <input type = "text" id = "newName<%= patient.id %>"
-                            value = "<%= patient.name %>"> is a
-                        <input type = "text" id = "newType<%= patient.id %>"
-                            value = "<%= patient.sex %>">
-                        <button class = "updateButton">Update</button>
-                    </span>
-        </script>
-    </body>
-</html>
+        <!-- Choose login -->
+        <div id = "chooseLogin">
+            <button id = "consumerLogBtn">Login as a consumer</button>
+            <button id = "providerLogBtn">Login as a provider</button>
+        </div>
+
+
+        <script type="text/javascript" id = "consumerLogin">
+        <form action="/session" class="form-horizontal" method="POST">
+            <fieldset>
+                <legend>Sign in as a consumer</legend>
+                <div class="control-group">
+                    <label for="full_name" class="controls">
+                        First & Last Name
+                    </label>
+                </div>
+                <div class="controls">
+                    <input type="text" name="full_name">
+
+                </div>
+                
+                <div class="control-group">
+                    <label for="password" class="controls">
+                        Password
+                    </label>
+                </div>
+                <div class="controls">
+                    <input type="password" name="password">
+                </div>
+                <input type="hidden" name="authenticity_token" value = "<%= form_authenticity_token()  %>">
+                <br>
+                <button class= "btn btn-default btn-sm">Sign In</button>
+
+            </form>
+            </script>
+
+
+
+        </body>
+    </html>
